docs: AGENTS.md 重构为索引,新增 wiki 子文件与调研文档
- AGENTS.md 从冗长文档重构为索引,各领域细节下沉到 docs/wiki/ 子文件
- 新增 wiki:技术栈与项目结构、构建运行与测试、代码约定与安全、
  扫描与Excel导出、Word报告导出、AI功能与表标记、打包与发布、
  桌面版与数据目录、数据源、授权码
- 新增 JVM 桌面 UI 框架调研文档
- 新增浏览器访问管控实施计划
- 新增 tauri 自动更新流程图(drawio + png)
- common/AGENTS.md、tauri/AGENTS.md 同步更新